--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-lg-7">
           <div class="about-descr">
 
-            <p class="p-heading">Hi, my name is Fernando I am 19 years old and I started programming during last year to make a project and I've never stop since.</p>
+            <p class="p-heading">Hi, my name is Fernando I am 19 years old and I started programming during last year to make a project and I've never stopped since.</p>
             <p class="separator">I love to programming the satisfaction that give me when I finish a code is something I can't explain, I am graduated in computer technician, and recently I joined PUC-PR Software Engineer course so that I can go deeper in programming and I hope we can work together!! </p>
 
           </div>
