--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <div class="about-descr">
 
             <p class="p-heading">Hi, my name is Fernando I am 19 years old and I started programming during last year to make a project and I've never stopped since.</p>
-            <p class="separator">I love to programming the satisfaction that give me when I finish a code is something I can't explain, I am graduated in computer technician, and recently I joined PUC-PR Software Engineer course so that I can go deeper in programming and I hope we can work together!! </p>
+            <p class="separator">I love programming the satisfaction that give me when I finish a code is something I can't explain, I am a computer technician, and recently I joined PUC-PR Software Engineer course so that I can go deeper in programming and I hope we can work together!! </p>
 
           </div>
 
